<?xml version="1.0"?>
<package format="3">
  <name>YOLO_ORB_SLAM3</name>
  <version>0.0.1</version>
  <description>YOLO + ORB-SLAM3 integration for ROS 2</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>GPLv3</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>launch_ros</depend>

  <export>
  </export>
</package>

